# Emu8086

./: .gitignore  Cargo.toml  README.md  build_dev.bat  build_dev.sh  build_release.bat  build_release.sh  hi-world.com.list  load_com_test.com  noname.com  noname.com.list
.github/workflows/: rust.yml
8086-emulator/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
8086-emulator/compiler/: FASMW.INI
rustfromnode/: index.js  package-lock.json  package.json
src/: emulator.rs  lib.rs  main.rs
src/emulator/: auxiliar.rs  emulator.rs  mod.rs  opcodes.rs  registers.rs
tests/mov/: MOV_HIGH_REG.com.list  MOV_HIGH_REG.com.~asm  MOV_LOW_REG.com  MOV_LOW_REG.com.list  MOV_LOW_REG.com.~asm
